# Harmonia-LM

./: LICENSE  README.md  condition_callback.py  demo.ipynb  extract_midi.py  inference_and_heatmap.py  pyproject.toml  ram_dataset.py  requirements.txt  settings.json  training.py  umap_projection.py
model/: condition_callback.py  inference_and_heatmap.py  ram_dataset.py  training.py  umap_projection.py
