[project]
name = "final-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.20"
dependencies = [
    "lightning>=2.6.5",
    "matplotlib",
    "miditok>=3.0.6.post1",
    "pretty-midi>=0.2.11",
    "seaborn>=0.13.2",
    "tensorboard>=2.21.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
